# smart_house_bot

./: .gitignore  .pre-commit-config.yaml  smart_house_bot.code-workspace
.github/workflows/: python-app.yml
bot/: pyproject.toml
bot/src/: config.py  ioc.py  main.py
bot/src/application/: dto.py  interactors.py  interfaces.py
bot/src/controllers/: amqp_bot.py  bot.py  middleware.py  states.py
bot/src/domain/: entities.py  errors.py
bot/src/infrastructure/: models.py
bot/src/infrastructure/adapters/: db.py  postgres.py  uow.py
bot/src/infrastructure/repositories/: home.py  home_user_role.py  message_cache.py  smart_device.py  user.py
command/: pyproject.toml
device_gateway/: pyproject.toml
nlu/: pyproject.toml
stt/: pyproject.toml
stt/src/: config.py  ioc.py  main.py
stt/src/application/: dto.py  errors.py  interactors.py  interfaces.py
stt/src/controllers/: amqp.py
stt/src/domain/: entities.py
stt/src/infrastructure/: audio_convertator.py  data_repo.py  redis.py  whisper_repo.py
stt/src/infrastructure/adapters/: rabbit.py
webapp/: pyproject.toml
