[project]
name = "bot"
version = "0.1.0"
description = """
Bot Service is an asynchronous microservice that provides a user-facing
interface for interacting with the system through Telegram. It leverages
Aiogram for building conversational flows, Dishka for dependency injection
and modular design, FastStream for publishing and consuming messages via
RabbitMQ, and Psycopg for persisting user data and events in PostgreSQL.
This service acts as the communication layer, bridging end users with the
backend command and device services.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.23.0",
    "dishka>=1.7.2",
    "faststream[rabbit]>=0.6.4",
    "psycopg>=3.3.2",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45"
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "types-redis>=4.6.0.20241004",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["migrations/*", "tests/*"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]
preview = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true 
namespace_packages = true
