[project]
name = "command"
version = "0.1.0"
description = """
Command Service is an asynchronous microservice responsible for producing
and dispatching structured commands into RabbitMQ. It leverages FastStream
for message publishing, Dishka for dependency injection and modular design,
and Pydantic for strict DTO validation. Uvicorn provides a lightweight
runtime for exposing APIs and integrations. This service acts as the entry
point for generating commands that downstream services (such as Device
Gateway) consume and execute.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.7.2",
    "faststream[rabbit]>=0.6.4",
    "pydantic>=2.12.5",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["migrations/*", "tests/*"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]
preview = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["command"]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true 
namespace_packages = true