[project]
name = "device-gateway"
version = "0.1.0"
description = """
Device Gateway is an asynchronous microservice for managing IoT devices.
It consumes commands from RabbitMQ, forwards them to an MQTT broker, and
persists device states and events in PostgreSQL. The service leverages
FastStream for queue handling, gmqtt for IoT communication, psycopg for
database integration, and Pydantic for strict DTO validation. Uvicorn
provides a lightweight runtime for exposing APIs and integrations.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "faststream[rabbit]>=0.6.4",
    "gmqtt>=0.7.0",
    "psycopg>=3.3.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]


[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["migrations/*", "tests/*"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]
preview = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["device_gateway"]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true 
namespace_packages = true