[project]
name = "nlu"
version = "0.1.0"
description = """
NLU Service is an asynchronous microservice that provides natural language
understanding and retrieval-augmented generation (RAG) capabilities. It
leverages sentence-transformers and Hugging Face Transformers with Torch
for embedding and inference, while Qdrant serves as the vector database
for semantic search. FastStream integrates RabbitMQ for message exchange,
Dishka ensures modular dependency injection, and Pydantic enforces strict
DTO validation. Uvicorn provides a lightweight runtime for exposing APIs
and integrations. This service acts as the intelligence layer, enabling
semantic command parsing and contextual responses for downstream services.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.7.2",
    "faststream[rabbit]>=0.6.4",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["migrations/*", "tests/*"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]
preview = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["nlu"]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true 
namespace_packages = true