[project]
name = "webapp"
version = "0.1.0"
description = """
WebApp Service is an asynchronous microservice that provides a web-based
interface and RESTful APIs for interacting with the IoT system. It is built
on FastAPI for high-performance HTTP endpoints, integrates with RabbitMQ
via FastStream for event-driven communication, and uses Psycopg for
persistent storage in PostgreSQL. Dishka ensures modular dependency
injection, while Pydantic enforces strict DTO validation. Uvicorn serves
as the runtime for hosting the application. This service acts as the
presentation layer, enabling users and external systems to access and
control backend services through a secure and scalable web interface.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.7.2",
    "fastapi>=0.126.0",
    "faststream[rabbit]>=0.6.4",
    "psycopg>=3.3.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["migrations/*", "tests/*"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]
preview = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["webapp"]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true 
namespace_packages = true